--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,22 @@
-.navbar {
+nav ul {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.navbar-buttons {
+  padding: 1em;
+  background-color: black;
   display: inline;
+}
+
+.navbar-buttons a {
+  text-decoration: none;
+  color: white;
+}
+
+.navbar-buttons a:hover {
+  text-decoration: none;
+  color: rgb(98, 218, 255);
 }
 
 .css-list.specifity {
@@ -28,4 +45,55 @@ ul {
 
 .css-list-list:last-child {
   background-color: rgb(231, 103, 103);
+}
+
+.display-ul {
+  display: inline-block;
+  background-color: rgb(219, 219, 219);
+}
+
+.border-boox {
+  box-sizing: border-box;
+  width: 200px;
+  margin: 1em;
+  padding: 1em;
+  background-color: rgb(206, 162, 247);
+}
+
+.border-boox-1 {
+  box-sizing: content-box;
+  width: 200px;
+  margin: 1em;
+  padding: 1em;
+  background-color: rgb(206, 162, 247);
+}
+
+.border-boox-1 .content-boox-heading {
+  color: rgb(179, 41, 41);
+}
+
+.box-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: stretch;
+  height: 300px;
+  color: white;
+  font-size: 2em;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.box-1 {
+  width: 300px;
+  background-color: blueviolet;
+}
+
+.box-2 {
+  width: 200px;
+  background-color: rgb(226, 43, 43);
+}
+
+.box-3 {
+  width: 180px;
+  background-color: rgb(116, 226, 43);
 }
